--- a/RealStateAnalysis.ipynb
+++ b/RealStateAnalysis.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
-    "import urllib\n",
+    "import pandas as pd\n",
     "from functools import partial\n",
-    "import re\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.options import Options\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
@@ -20,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,60 +40,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "enderecos = []\n",
     "regioes = []\n",
-    "valores = []\n",
-    "outras_informacoes = []"
+    "tipos_valores = []\n",
+    "outras_informacoes = []\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "div = driver.find_element(By.CLASS_NAME,\"sc-18lu2ht-0\")\n",
-    "time.sleep(10)\n",
-    "for i in range(5):\n",
+    "div = driver.find_element(By.CLASS_NAME,\"sc-1y4z098-0.geAIvx\")\n",
+    "time.sleep(2)\n",
+    "for i in range(30):\n",
     "    enderecos.append([x.text for x in driver.find_elements(By.CSS_SELECTOR, 'span[data-testid=\"house-card-address\"]')])\n",
     "    regioes.append([x.text for x in driver.find_elements(By.CSS_SELECTOR, 'span[data-testid=\"house-card-region\"]')])\n",
-    "    valores.append([x.text for x in  driver.find_elements(By.CSS_SELECTOR, 'h3[data-testid=\"house-card-rent\"]')])\n",
-    "    outras_informacoes.append(driver.find_elements(By.CLASS_NAME, 'sc-gsnTZi.iEPiQX.sc-crXcEl.jddosl.CozyTypography'))\n",
+    "    tipos_valores.append([x.text for x in  driver.find_elements(By.CLASS_NAME, 'sc-gsnTZi.iRsaMY.sc-crXcEl.jddosl.CozyTypography')])\n",
+    "    outras_informacoes.append(driver.find_elements(By.CSS_SELECTOR, 'small[data-testid=\"house-card-area\"]'))\n",
     "    driver.execute_script(\"arguments[0].scrollBy(0, 500);\", div)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outras_informacoes_clean = []\n",
+    "for i in outras_informacoes:\n",
+    "    for j in i:\n",
+    "        outras_informacoes_clean.append(j.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "enderecos = [item for sublist in enderecos for item in sublist]\n",
     "regioes = [item for sublist in regioes for item in sublist]\n",
-    "valores = [item for sublist in valores for item in sublist]\n",
-    "outras_informacoes = [item for sublist in outras_informacoes for item in sublist]"
+    "tipos_valores = [item for sublist in tipos_valores for item in sublist]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tipo = []\n",
+    "valores = []\n",
+    "\n",
+    "for i in range(len(tipos_valores)):\n",
+    "    if tipos_valores[i].startswith(\"R$\"):\n",
+    "        valores.append(tipos_valores[i])\n",
+    "    else:\n",
+    "        tipo.append(tipos_valores[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "metragem = []\n",
     "n_quartos = []\n",
     "n_vagas = []\n",
-    "tipo_imovel = []\n",
-    "for info in outras_informacoes:\n",
-    "    splited_info  = info.text.split('•')\n",
-    "    metragem.append(splited_info[0])\n",
-    "    n_quartos.append(splited_info[1])\n",
-    "    n_vagas.append(splited_info[2])\n",
-    "    tipo_imovel.append(splited_info[3])"
+    "for info in outras_informacoes_clean:\n",
+    "    splited_info  = info.split('•')\n",
+    "    metragem.append(int(splited_info[0].strip('m² ')))\n",
+    "    n_quartos.append(int(splited_info[1].strip(\" quartos \")))\n",
+    "    n_vagas.append(int((splited_info[2].strip(\" vagas \"))))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valores = [item.strip(\"R$ \").replace(\".\",\"\")  for item in valores]\n",
+    "regioes = [item.strip(\"São Paulo\").strip(',')  for item in regioes]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "real_state = {\"tipo\": tipo, \"enderecos\" : enderecos, \"regioes\" :  regioes, \"valores\" : valores, \"metragem\" : metragem, \"n_quartos\" : n_quartos, \"n_vagas\" : n_vagas}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(real_state)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"real_state.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"real_state.csv\")"
    ]
   }
  ],
