click more button and building dataset

--- a/RealStateAnalysis.ipynb
+++ b/RealStateAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,98 +11,289 @@
     "from functools import partial\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.options import Options\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "from selenium.webdriver.chrome.service import Service\n",
     "from selenium.webdriver.common.by import By\n",
-    "import time"
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "import time\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()))\n",
-    "driver.set_page_load_timeout(60)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = 'https://www.quintoandar.com.br/comprar/imovel/sao-paulo-sp-brasil'\n",
-    "driver.get(url)\n",
-    "driver.implicitly_wait(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "enderecos = []\n",
-    "regioes = []\n",
-    "tipos_valores = []\n",
-    "outras_informacoes = []\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "div = driver.find_element(By.CLASS_NAME,\"sc-1y4z098-0.geAIvx\")\n",
-    "time.sleep(2)\n",
-    "for i in range(30):\n",
-    "    enderecos.append([x.text for x in driver.find_elements(By.CSS_SELECTOR, 'span[data-testid=\"house-card-address\"]')])\n",
-    "    regioes.append([x.text for x in driver.find_elements(By.CSS_SELECTOR, 'span[data-testid=\"house-card-region\"]')])\n",
-    "    tipos_valores.append([x.text for x in  driver.find_elements(By.CLASS_NAME, 'sc-gsnTZi.iRsaMY.sc-crXcEl.jddosl.CozyTypography')])\n",
-    "    outras_informacoes.append(driver.find_elements(By.CSS_SELECTOR, 'small[data-testid=\"house-card-area\"]'))\n",
-    "    driver.execute_script(\"arguments[0].scrollBy(0, 500);\", div)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "outras_informacoes_clean = []\n",
-    "for i in outras_informacoes:\n",
-    "    for j in i:\n",
-    "        outras_informacoes_clean.append(j.text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "enderecos = [item for sublist in enderecos for item in sublist]\n",
-    "regioes = [item for sublist in regioes for item in sublist]\n",
-    "tipos_valores = [item for sublist in tipos_valores for item in sublist]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tipo = []\n",
-    "valores = []\n",
+    "def get_dataset(url, file_name):\n",
+    "    \n",
+    "    print(\"Getting page url\")\n",
+    "    driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()))\n",
+    "    driver.set_page_load_timeout(60)\n",
+    "    driver.get(url)\n",
+    "    \n",
+    "    max_click_SHOW_MORE = 10\n",
+    "    WebDriverWait(driver, 20).until(EC.visibility_of_element_located((By.CLASS_NAME, \"sc-ftvSup.xPMpo\")))\n",
+    "    \n",
+    "    print(\"Loading more information\")\n",
     "\n",
-    "for i in range(len(tipos_valores)):\n",
-    "    if tipos_valores[i].startswith(\"R$\"):\n",
-    "        valores.append(tipos_valores[i])\n",
-    "    else:\n",
-    "        tipo.append(tipos_valores[i])"
+    "    for i in range(max_click_SHOW_MORE): \n",
+    "        WebDriverWait(driver, 20).until(EC.visibility_of_element_located((By.CLASS_NAME, \"sc-ftvSup.xPMpo\")))\n",
+    "        elem = driver.find_elements(By.CLASS_NAME, \"sc-ftvSup.xPMpo\")\n",
+    "        elem[0].click()\n",
+    "       \n",
+    "    print(\"Collecting data\")\n",
+    "    enderecos = []\n",
+    "    regioes = []\n",
+    "    tipos_valores = []\n",
+    "    outras_informacoes = []\n",
+    "    div = driver.find_element(By.CLASS_NAME,\"sc-1y4z098-0.geAIvx\")\n",
+    "    time.sleep(2)\n",
+    "    for i in range(30):\n",
+    "        enderecos.append([x.text for x in driver.find_elements(By.CSS_SELECTOR, 'span[data-testid=\"house-card-address\"]')])\n",
+    "        regioes.append([x.text for x in driver.find_elements(By.CSS_SELECTOR, 'span[data-testid=\"house-card-region\"]')])\n",
+    "        tipos_valores.append([x.text for x in  driver.find_elements(By.CLASS_NAME, 'sc-gsnTZi.iRsaMY.sc-crXcEl.jddosl.CozyTypography')])\n",
+    "        outras_informacoes.append(driver.find_elements(By.CSS_SELECTOR, 'small[data-testid=\"house-card-area\"]'))\n",
+    "        driver.execute_script(\"arguments[0].scrollBy(0, 500);\", div)\n",
+    "\n",
+    "    outras_informacoes_clean = []\n",
+    "    for i in outras_informacoes:\n",
+    "        for j in i:\n",
+    "            outras_informacoes_clean.append(j.text)\n",
+    "\n",
+    "    enderecos = [item for sublist in enderecos for item in sublist]\n",
+    "    regioes = [item for sublist in regioes for item in sublist]\n",
+    "    tipos_valores = [item for sublist in tipos_valores for item in sublist]\n",
+    "\n",
+    "    tipo = []\n",
+    "    valores = []\n",
+    "\n",
+    "    for i in range(len(tipos_valores)):\n",
+    "        if tipos_valores[i].startswith(\"R$\"):\n",
+    "            valores.append(tipos_valores[i])\n",
+    "        else:\n",
+    "            tipo.append(tipos_valores[i])\n",
+    "    metragem = []\n",
+    "    n_quartos = []\n",
+    "    n_vagas = []\n",
+    "    for info in outras_informacoes_clean:\n",
+    "        splited_info  = info.split('•')\n",
+    "        metragem.append(int(splited_info[0].strip('m² ')))\n",
+    "        n_quartos.append(int(splited_info[1].strip(\" quartos \")))\n",
+    "        n_vagas.append(int((splited_info[2].strip(\" vagas \"))))\n",
+    "    valores = [item.strip(\"R$ \").replace(\".\",\"\")  for item in valores]\n",
+    "    regioes = [item.strip(\"São Paulo\").strip(',')  for item in regioes]\n",
+    "    \n",
+    "    print(\"Building the dataset\")\n",
+    "\n",
+    "    real_state = {\"tipo\": tipo, \"enderecos\" : enderecos, \"regioes\" :  regioes, \"valores\" : valores, \"metragem\" : metragem, \"n_quartos\" : n_quartos, \"n_vagas\" : n_vagas}\n",
+    "    df = pd.DataFrame(real_state)\n",
+    "    df.to_csv(file_name, index=False)\n",
+    "    \n",
+    "    print(\"Done\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name= \"real_state.csv\"\n",
+    "if not os.path.exists(file_name):\n",
+    "    get_dataset('https://www.quintoandar.com.br/comprar/imovel/sao-paulo-sp-brasil', file_name)\n",
+    "df = pd.read_csv(file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tipo</th>\n",
+       "      <th>enderecos</th>\n",
+       "      <th>regioes</th>\n",
+       "      <th>valores</th>\n",
+       "      <th>metragem</th>\n",
+       "      <th>n_quartos</th>\n",
+       "      <th>n_vagas</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Casa</td>\n",
+       "      <td>Rua José de Maio</td>\n",
+       "      <td>Interlagos</td>\n",
+       "      <td>2600000</td>\n",
+       "      <td>450</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Rua Justo Azambuja</td>\n",
+       "      <td>Cambuci</td>\n",
+       "      <td>320000</td>\n",
+       "      <td>93</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Casa</td>\n",
+       "      <td>Rua Maestro Eduardo de Guarnieri</td>\n",
+       "      <td>Interlagos</td>\n",
+       "      <td>1700000</td>\n",
+       "      <td>215</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Avenida Alcântara Machado</td>\n",
+       "      <td>Brás</td>\n",
+       "      <td>190000</td>\n",
+       "      <td>70</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Studio e kitnet</td>\n",
+       "      <td>Rua Fernão Dias</td>\n",
+       "      <td>inheiros</td>\n",
+       "      <td>420000</td>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3625</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Rua Glicério</td>\n",
+       "      <td>Vila Santana</td>\n",
+       "      <td>431000</td>\n",
+       "      <td>64</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3626</th>\n",
+       "      <td>Casa em condomínio</td>\n",
+       "      <td>Rua André Natale</td>\n",
+       "      <td>Jardim Popular</td>\n",
+       "      <td>289000</td>\n",
+       "      <td>64</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3627</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Rua Barão de Jaguara</td>\n",
+       "      <td>Mooca</td>\n",
+       "      <td>250000</td>\n",
+       "      <td>66</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3628</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Rua Doutor Valentim Amaral</td>\n",
+       "      <td>Cambuci</td>\n",
+       "      <td>355000</td>\n",
+       "      <td>34</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3629</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Rua do Bucolismo</td>\n",
+       "      <td>Brás</td>\n",
+       "      <td>190000</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3630 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    tipo                         enderecos         regioes  \\\n",
+       "0                   Casa                  Rua José de Maio      Interlagos   \n",
+       "1            Apartamento                Rua Justo Azambuja         Cambuci   \n",
+       "2                   Casa  Rua Maestro Eduardo de Guarnieri      Interlagos   \n",
+       "3            Apartamento         Avenida Alcântara Machado            Brás   \n",
+       "4        Studio e kitnet                   Rua Fernão Dias        inheiros   \n",
+       "...                  ...                               ...             ...   \n",
+       "3625         Apartamento                      Rua Glicério    Vila Santana   \n",
+       "3626  Casa em condomínio                  Rua André Natale  Jardim Popular   \n",
+       "3627         Apartamento              Rua Barão de Jaguara           Mooca   \n",
+       "3628         Apartamento        Rua Doutor Valentim Amaral         Cambuci   \n",
+       "3629         Apartamento                  Rua do Bucolismo            Brás   \n",
+       "\n",
+       "      valores  metragem  n_quartos  n_vagas  \n",
+       "0     2600000       450          4        5  \n",
+       "1      320000        93          2        0  \n",
+       "2     1700000       215          2        2  \n",
+       "3      190000        70          2        0  \n",
+       "4      420000        28          1        0  \n",
+       "...       ...       ...        ...      ...  \n",
+       "3625   431000        64          2        1  \n",
+       "3626   289000        64          2        2  \n",
+       "3627   250000        66          2        0  \n",
+       "3628   355000        34          2        1  \n",
+       "3629   190000        48          1        1  \n",
+       "\n",
+       "[3630 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
@@ -110,63 +301,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "metragem = []\n",
-    "n_quartos = []\n",
-    "n_vagas = []\n",
-    "for info in outras_informacoes_clean:\n",
-    "    splited_info  = info.split('•')\n",
-    "    metragem.append(int(splited_info[0].strip('m² ')))\n",
-    "    n_quartos.append(int(splited_info[1].strip(\" quartos \")))\n",
-    "    n_vagas.append(int((splited_info[2].strip(\" vagas \"))))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "valores = [item.strip(\"R$ \").replace(\".\",\"\")  for item in valores]\n",
-    "regioes = [item.strip(\"São Paulo\").strip(',')  for item in regioes]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "real_state = {\"tipo\": tipo, \"enderecos\" : enderecos, \"regioes\" :  regioes, \"valores\" : valores, \"metragem\" : metragem, \"n_quartos\" : n_quartos, \"n_vagas\" : n_vagas}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(real_state)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv(\"real_state.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"real_state.csv\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -185,9 +320,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "0adcc2737ebf6a4a119f135174df96668767fca1ef1112612db5ecadf2b6d608"
