--- a/RealStateAnalysis.ipynb
+++ b/RealStateAnalysis.ipynb
@@ -2,27 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
-    "from functools import partial\n",
     "from selenium import webdriver\n",
-    "from selenium.webdriver.chrome.options import Options\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "from selenium.webdriver.chrome.service import Service\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "import time\n",
-    "import os"
+    "import os\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.preprocessing import LabelEncoder\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,29 +37,27 @@
     "    driver.set_page_load_timeout(60)\n",
     "    driver.get(url)\n",
     "    \n",
-    "    max_click_SHOW_MORE = 10\n",
     "    WebDriverWait(driver, 20).until(EC.visibility_of_element_located((By.CLASS_NAME, \"sc-ftvSup.xPMpo\")))\n",
     "    \n",
     "    print(\"Loading more information\")\n",
     "\n",
-    "    for i in range(max_click_SHOW_MORE): \n",
-    "        WebDriverWait(driver, 20).until(EC.visibility_of_element_located((By.CLASS_NAME, \"sc-ftvSup.xPMpo\")))\n",
-    "        elem = driver.find_elements(By.CLASS_NAME, \"sc-ftvSup.xPMpo\")\n",
-    "        elem[0].click()\n",
     "       \n",
     "    print(\"Collecting data\")\n",
     "    enderecos = []\n",
     "    regioes = []\n",
     "    tipos_valores = []\n",
     "    outras_informacoes = []\n",
-    "    div = driver.find_element(By.CLASS_NAME,\"sc-1y4z098-0.geAIvx\")\n",
-    "    time.sleep(2)\n",
-    "    for i in range(30):\n",
+    "    for i in range(50):\n",
     "        enderecos.append([x.text for x in driver.find_elements(By.CSS_SELECTOR, 'span[data-testid=\"house-card-address\"]')])\n",
     "        regioes.append([x.text for x in driver.find_elements(By.CSS_SELECTOR, 'span[data-testid=\"house-card-region\"]')])\n",
     "        tipos_valores.append([x.text for x in  driver.find_elements(By.CLASS_NAME, 'sc-gsnTZi.iRsaMY.sc-crXcEl.jddosl.CozyTypography')])\n",
     "        outras_informacoes.append(driver.find_elements(By.CSS_SELECTOR, 'small[data-testid=\"house-card-area\"]'))\n",
-    "        driver.execute_script(\"arguments[0].scrollBy(0, 500);\", div)\n",
+    "        WebDriverWait(driver, 20).until(EC.visibility_of_element_located((By.CLASS_NAME, \"sc-ftvSup.xPMpo\")))\n",
+    "        elem = driver.find_elements(By.CLASS_NAME, \"sc-ftvSup.xPMpo\")\n",
+    "        elem[0].click()\n",
+    "        time.sleep(1)\n",
+    "        print(i)\n",
+    "\n",
     "\n",
     "    outras_informacoes_clean = []\n",
     "    for i in outras_informacoes:\n",
@@ -83,7 +85,7 @@
     "        n_quartos.append(int(splited_info[1].strip(\" quartos \")))\n",
     "        n_vagas.append(int((splited_info[2].strip(\" vagas \"))))\n",
     "    valores = [item.strip(\"R$ \").replace(\".\",\"\")  for item in valores]\n",
-    "    regioes = [item.strip(\"São Paulo\").strip(',')  for item in regioes]\n",
+    "    regioes = [item.strip(\"R$ \").replace(\".\",\"\") for item in regioes]\n",
     "    \n",
     "    print(\"Building the dataset\")\n",
     "\n",
@@ -96,19 +98,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "file_name= \"real_state.csv\"\n",
     "if not os.path.exists(file_name):\n",
-    "    get_dataset('https://www.quintoandar.com.br/comprar/imovel/sao-paulo-sp-brasil', file_name)\n",
+    "    get_dataset('https://www.quintoandar.com.br/comprar/imovel/pinheiros-sao-paulo-sp-brasil', file_name)\n",
     "df = pd.read_csv(file_name)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Rua Fernão Dias              36\n",
+       "Rua Fradique Coutinho        35\n",
+       "Rua Cardeal Arcoverde        30\n",
+       "Rua Teodoro Sampaio          28\n",
+       "Rua Mourato Coelho           28\n",
+       "                             ..\n",
+       "Conselheiro Pereira Pinto     1\n",
+       "Mourato Coelho                1\n",
+       "Rua dos Cariris               1\n",
+       "Rua Marcos Azevedo            1\n",
+       "Antônio da Silveira           1\n",
+       "Name: enderecos, Length: 90, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.enderecos.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "label_encoder = LabelEncoder()\n",
+    "\n",
+    "df['rua_encoded'] = label_encoder.fit_transform(df['enderecos'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(columns=[\"enderecos\", \"regioes\"] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ohe = OneHotEncoder()\n",
+    "transformed = ohe.fit_transform(df[['tipo']])\n",
+    "df = df.drop(columns=['tipo'])\n",
+    "df[ohe.categories_[0]] = transformed.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -132,65 +207,71 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>tipo</th>\n",
-       "      <th>enderecos</th>\n",
-       "      <th>regioes</th>\n",
        "      <th>valores</th>\n",
        "      <th>metragem</th>\n",
        "      <th>n_quartos</th>\n",
        "      <th>n_vagas</th>\n",
+       "      <th>rua_encoded</th>\n",
+       "      <th>Apartamento</th>\n",
+       "      <th>Casa</th>\n",
+       "      <th>Studio e kitnet</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Casa</td>\n",
-       "      <td>Rua José de Maio</td>\n",
-       "      <td>Interlagos</td>\n",
-       "      <td>2600000</td>\n",
-       "      <td>450</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
+       "      <td>1250000</td>\n",
+       "      <td>85</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>77</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Apartamento</td>\n",
-       "      <td>Rua Justo Azambuja</td>\n",
-       "      <td>Cambuci</td>\n",
-       "      <td>320000</td>\n",
-       "      <td>93</td>\n",
+       "      <td>820000</td>\n",
+       "      <td>44</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Casa</td>\n",
-       "      <td>Rua Maestro Eduardo de Guarnieri</td>\n",
-       "      <td>Interlagos</td>\n",
-       "      <td>1700000</td>\n",
-       "      <td>215</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1380000</td>\n",
+       "      <td>110</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Apartamento</td>\n",
-       "      <td>Avenida Alcântara Machado</td>\n",
-       "      <td>Brás</td>\n",
-       "      <td>190000</td>\n",
-       "      <td>70</td>\n",
+       "      <td>780000</td>\n",
+       "      <td>69</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Studio e kitnet</td>\n",
-       "      <td>Rua Fernão Dias</td>\n",
-       "      <td>inheiros</td>\n",
-       "      <td>420000</td>\n",
-       "      <td>28</td>\n",
+       "      <td>850000</td>\n",
+       "      <td>65</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>56</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -201,93 +282,99 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3625</th>\n",
-       "      <td>Apartamento</td>\n",
-       "      <td>Rua Glicério</td>\n",
-       "      <td>Vila Santana</td>\n",
-       "      <td>431000</td>\n",
-       "      <td>64</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3626</th>\n",
-       "      <td>Casa em condomínio</td>\n",
-       "      <td>Rua André Natale</td>\n",
-       "      <td>Jardim Popular</td>\n",
-       "      <td>289000</td>\n",
-       "      <td>64</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3627</th>\n",
-       "      <td>Apartamento</td>\n",
-       "      <td>Rua Barão de Jaguara</td>\n",
-       "      <td>Mooca</td>\n",
-       "      <td>250000</td>\n",
-       "      <td>66</td>\n",
-       "      <td>2</td>\n",
+       "      <th>14020</th>\n",
+       "      <td>1200000</td>\n",
+       "      <td>97</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3628</th>\n",
-       "      <td>Apartamento</td>\n",
-       "      <td>Rua Doutor Valentim Amaral</td>\n",
-       "      <td>Cambuci</td>\n",
-       "      <td>355000</td>\n",
-       "      <td>34</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <th>14021</th>\n",
+       "      <td>3000000</td>\n",
+       "      <td>230</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3629</th>\n",
-       "      <td>Apartamento</td>\n",
-       "      <td>Rua do Bucolismo</td>\n",
-       "      <td>Brás</td>\n",
-       "      <td>190000</td>\n",
-       "      <td>48</td>\n",
+       "      <th>14022</th>\n",
+       "      <td>2100000</td>\n",
+       "      <td>343</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14023</th>\n",
+       "      <td>1600000</td>\n",
+       "      <td>139</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14024</th>\n",
+       "      <td>4500000</td>\n",
+       "      <td>210</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3630 rows × 7 columns</p>\n",
+       "<p>534 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    tipo                         enderecos         regioes  \\\n",
-       "0                   Casa                  Rua José de Maio      Interlagos   \n",
-       "1            Apartamento                Rua Justo Azambuja         Cambuci   \n",
-       "2                   Casa  Rua Maestro Eduardo de Guarnieri      Interlagos   \n",
-       "3            Apartamento         Avenida Alcântara Machado            Brás   \n",
-       "4        Studio e kitnet                   Rua Fernão Dias        inheiros   \n",
-       "...                  ...                               ...             ...   \n",
-       "3625         Apartamento                      Rua Glicério    Vila Santana   \n",
-       "3626  Casa em condomínio                  Rua André Natale  Jardim Popular   \n",
-       "3627         Apartamento              Rua Barão de Jaguara           Mooca   \n",
-       "3628         Apartamento        Rua Doutor Valentim Amaral         Cambuci   \n",
-       "3629         Apartamento                  Rua do Bucolismo            Brás   \n",
+       "       valores  metragem  n_quartos  n_vagas  rua_encoded  Apartamento  Casa  \\\n",
+       "0      1250000        85          2        2           77          1.0   0.0   \n",
+       "1       820000        44          2        1           40          1.0   0.0   \n",
+       "2      1380000       110          3        1           40          1.0   0.0   \n",
+       "3       780000        69          2        2           30          1.0   0.0   \n",
+       "4       850000        65          2        1           56          1.0   0.0   \n",
+       "...        ...       ...        ...      ...          ...          ...   ...   \n",
+       "14020  1200000        97          3        0           22          1.0   0.0   \n",
+       "14021  3000000       230          4        0           24          0.0   1.0   \n",
+       "14022  2100000       343          0        5           20          0.0   1.0   \n",
+       "14023  1600000       139          3        1            1          0.0   1.0   \n",
+       "14024  4500000       210          3        0           70          0.0   1.0   \n",
        "\n",
-       "      valores  metragem  n_quartos  n_vagas  \n",
-       "0     2600000       450          4        5  \n",
-       "1      320000        93          2        0  \n",
-       "2     1700000       215          2        2  \n",
-       "3      190000        70          2        0  \n",
-       "4      420000        28          1        0  \n",
-       "...       ...       ...        ...      ...  \n",
-       "3625   431000        64          2        1  \n",
-       "3626   289000        64          2        2  \n",
-       "3627   250000        66          2        0  \n",
-       "3628   355000        34          2        1  \n",
-       "3629   190000        48          1        1  \n",
+       "       Studio e kitnet  \n",
+       "0                  0.0  \n",
+       "1                  0.0  \n",
+       "2                  0.0  \n",
+       "3                  0.0  \n",
+       "4                  0.0  \n",
+       "...                ...  \n",
+       "14020              0.0  \n",
+       "14021              0.0  \n",
+       "14022              0.0  \n",
+       "14023              0.0  \n",
+       "14024              0.0  \n",
        "\n",
-       "[3630 rows x 7 columns]"
+       "[534 rows x 8 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,10 +385,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X = df.drop(columns=[\"valores\"])\n",
+    "y = df.valores\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linear_regression = LinearRegression()\n",
+    "\n",
+    "linear_regression.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = linear_regression.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R-squared Score: 0.41259434528175465\n"
+     ]
+    }
+   ],
+   "source": [
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(\"R-squared Score:\", r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R-squared Score: 0.6119924725080088\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf = RandomForestRegressor(n_estimators=10, random_state=10)\n",
+    "rf.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = rf.predict(X_test)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(\"R-squared Score:\", r2)"
+   ]
   }
  ],
  "metadata": {
@@ -320,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
