--- a/RealStateAnalysis.ipynb
+++ b/RealStateAnalysis.ipynb
@@ -21,7 +21,10 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import r2_score\n",
-    "from sklearn.preprocessing import LabelEncoder\n"
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sn\n",
+    "\n"
    ]
   },
   {
@@ -47,7 +50,7 @@
     "    regioes = []\n",
     "    tipos_valores = []\n",
     "    outras_informacoes = []\n",
-    "    for i in range(50):\n",
+    "    for i in range(20):\n",
     "        enderecos.append([x.text for x in driver.find_elements(By.CSS_SELECTOR, 'span[data-testid=\"house-card-address\"]')])\n",
     "        regioes.append([x.text for x in driver.find_elements(By.CSS_SELECTOR, 'span[data-testid=\"house-card-region\"]')])\n",
     "        tipos_valores.append([x.text for x in  driver.find_elements(By.CLASS_NAME, 'sc-gsnTZi.iRsaMY.sc-crXcEl.jddosl.CozyTypography')])\n",
@@ -98,14 +101,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name= \"real_state.csv\"\n",
-    "if not os.path.exists(file_name):\n",
-    "    get_dataset('https://www.quintoandar.com.br/comprar/imovel/pinheiros-sao-paulo-sp-brasil', file_name)\n",
-    "df = pd.read_csv(file_name)"
+    "regioes = [\"vila-olimpia\", \"jardim-paulista\", \"jardim-europa\"]\n",
+    "for regiao in regioes:\n",
+    "    file_name= f\"real_state_{regiao}.csv\"\n",
+    "    if not os.path.exists(file_name):\n",
+    "        get_dataset(f'https://www.quintoandar.com.br/comprar/imovel/{regiao}-sao-paulo-sp-brasil', file_name)\n"
    ]
   },
   {
@@ -114,38 +118,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop_duplicates()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Rua Fernão Dias              36\n",
-       "Rua Fradique Coutinho        35\n",
-       "Rua Cardeal Arcoverde        30\n",
-       "Rua Teodoro Sampaio          28\n",
-       "Rua Mourato Coelho           28\n",
-       "                             ..\n",
-       "Conselheiro Pereira Pinto     1\n",
-       "Mourato Coelho                1\n",
-       "Rua dos Cariris               1\n",
-       "Rua Marcos Azevedo            1\n",
-       "Antônio da Silveira           1\n",
-       "Name: enderecos, Length: 90, dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.enderecos.value_counts()"
+    "df_pinheiros = pd.read_csv(\"real_state_pinheiros.csv\")\n",
+    "df_jardim_paulista = pd.read_csv(\"real_state_jardim-paulista.csv\")\n",
+    "df_jardim_europa = pd.read_csv(\"real_state_jardim-europa.csv\")"
    ]
   },
   {
@@ -154,10 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "label_encoder = LabelEncoder()\n",
-    "\n",
-    "df['rua_encoded'] = label_encoder.fit_transform(df['enderecos'])"
+    "df = pd.concat([df_pinheiros, df_jardim_paulista, df_jardim_europa], axis=0)"
    ]
   },
   {
@@ -166,12 +138,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(columns=[\"enderecos\", \"regioes\"] )"
+    "df = df.drop_duplicates()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(columns=[\"enderecos\"] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,209 +164,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>valores</th>\n",
-       "      <th>metragem</th>\n",
-       "      <th>n_quartos</th>\n",
-       "      <th>n_vagas</th>\n",
-       "      <th>rua_encoded</th>\n",
-       "      <th>Apartamento</th>\n",
-       "      <th>Casa</th>\n",
-       "      <th>Studio e kitnet</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1250000</td>\n",
-       "      <td>85</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>77</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>820000</td>\n",
-       "      <td>44</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>40</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1380000</td>\n",
-       "      <td>110</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>40</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>780000</td>\n",
-       "      <td>69</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>30</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>850000</td>\n",
-       "      <td>65</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>56</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14020</th>\n",
-       "      <td>1200000</td>\n",
-       "      <td>97</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>22</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14021</th>\n",
-       "      <td>3000000</td>\n",
-       "      <td>230</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>24</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14022</th>\n",
-       "      <td>2100000</td>\n",
-       "      <td>343</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14023</th>\n",
-       "      <td>1600000</td>\n",
-       "      <td>139</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14024</th>\n",
-       "      <td>4500000</td>\n",
-       "      <td>210</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>534 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       valores  metragem  n_quartos  n_vagas  rua_encoded  Apartamento  Casa  \\\n",
-       "0      1250000        85          2        2           77          1.0   0.0   \n",
-       "1       820000        44          2        1           40          1.0   0.0   \n",
-       "2      1380000       110          3        1           40          1.0   0.0   \n",
-       "3       780000        69          2        2           30          1.0   0.0   \n",
-       "4       850000        65          2        1           56          1.0   0.0   \n",
-       "...        ...       ...        ...      ...          ...          ...   ...   \n",
-       "14020  1200000        97          3        0           22          1.0   0.0   \n",
-       "14021  3000000       230          4        0           24          0.0   1.0   \n",
-       "14022  2100000       343          0        5           20          0.0   1.0   \n",
-       "14023  1600000       139          3        1            1          0.0   1.0   \n",
-       "14024  4500000       210          3        0           70          0.0   1.0   \n",
-       "\n",
-       "       Studio e kitnet  \n",
-       "0                  0.0  \n",
-       "1                  0.0  \n",
-       "2                  0.0  \n",
-       "3                  0.0  \n",
-       "4                  0.0  \n",
-       "...                ...  \n",
-       "14020              0.0  \n",
-       "14021              0.0  \n",
-       "14022              0.0  \n",
-       "14023              0.0  \n",
-       "14024              0.0  \n",
-       "\n",
-       "[534 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df"
+    "ohe = OneHotEncoder()\n",
+    "transformed_2 = ohe.fit_transform(df[['regioes']])\n",
+    "df = df.drop(columns=['regioes'])\n",
+    "df[ohe.categories_[0]] = transformed_2.toarray()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,14 +200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R-squared Score: 0.41259434528175465\n"
+      "R-squared Score: 0.6724248017032823\n"
      ]
     }
    ],
@@ -428,14 +219,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R-squared Score: 0.6119924725080088\n"
+      "R-squared Score: 0.8489202812334167\n"
      ]
     }
    ],
