--- a/RealStateAnalysis.ipynb
+++ b/RealStateAnalysis.ipynb
@@ -4,7 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Análise de Imóveis em SP"
+    "# Análise de Imóveis em SP"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introdução"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Com o advento da tecnologia na sociedade, os dados gerados passaram a crescer de forma exponencial, surgindo assim a necessidade de analisá-los para ser possível entender melhor as relações do ser humano com a tecnologia. Desse modo, o WebScrapping é uma das formas de obter dados de fontes onlines mais utilizadas hoje em dia. Essa técnica é responsável por captar dados estruturados de sites online de maneira automática e é muito utilizada para treinar modelos de tomada de decisão."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problema"
    ]
   },
   {
@@ -16,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +63,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extração de Dados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A funcão abaixo é responsável por realizar o scrapping do Quinto Andar de acordo com a região desejada. Para isso, utilizou-se da Biblioteca Selenium e foram coletados os seguintes dados: enderecos, regioes, valores, metragem, número de quartos e número de vagas."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +311,7 @@
        "4   850000        65          2        1  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +324,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Observando os valors por região:"
+    "## Análise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observando os valores dos imóveis por região:"
    ]
   },
   {
@@ -439,6 +481,13 @@
     "r2 = r2_score(y_test, y_pred)\n",
     "\n",
     "print(\"R-squared Score:\", r2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusão"
    ]
   },
   {
